--- a/Bibliographie/Bibliographie.bib
+++ b/Bibliographie/Bibliographie.bib
@@ -26,3 +26,13 @@
 	year={2022},
 	publisher={Frontiers}
 }
+
+@inproceedings{python_control2021,
+  author = {Fuller, S. and Greiner, B. and Moore, J. and Murray, R. and van Paassen, R. and Yorke, R.},
+  title = {The Python Control Systems Library (python-control)},
+  booktitle = {60th IEEE Conference on Decision and Control (CDC)},
+  pages = {4875--4881},
+  year = {2021},
+  organization = {IEEE},
+  url = {https://python-control.org}
+}
