--- a/Content/Mechanical Assembly.tex
+++ b/Content/Mechanical Assembly.tex
@@ -2,11 +2,12 @@
 
 \graphicspath{{./Figures/Modeling}}
 
-\begin{itemize}
-	\item Intro Overview of the chapter.
-	\item Importance of mechanical assembly in the overall project.
-\end{itemize}
-
+%\begin{itemize}
+%	\item Intro Overview of the chapter.
+%	\item Importance of mechanical assembly in the overall project.
+In this chapter, the mechanical assembly of the robot is discussed. The mechanical assembly is the process of putting together the mechanical components of the robot. The mechanical components include the chassis, the wheels, the motors.
+%\end{itemize}
+\newpage
 
 \section{Components Overview}
 \begin{itemize}
